<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/dialog_margin">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/scrollView">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/dialog_margin"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description1header"
					android:textStyle="bold"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description1"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/dialog_margin"
					android:layout_marginLeft="@dimen/dialog_margin"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description2header"
					android:textStyle="bold"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description2"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/dialog_margin"
					android:layout_marginLeft="@dimen/dialog_margin"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description3header"
					android:textStyle="bold"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description3"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/dialog_margin"
					android:layout_marginLeft="@dimen/dialog_margin"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description4header"
					android:textStyle="bold"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description4"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/dialog_margin"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/description5"/>

			</LinearLayout>

		</ScrollView>

	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_close"
			android:id="@+id/button_close"
			android:layout_gravity="center"/>

	</LinearLayout>

</LinearLayout>
