<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:context=".MainActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/scrollView">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/activity_margin">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/rectangle">

				<Switch
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/switch_activate"
					android:id="@+id/switch_activate"
					android:checked="true" />

			</LinearLayout>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin"
				android:background="@drawable/rectangle">

				<CheckBox
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/cb_replaceGlyphs"
					android:id="@+id/cb_replaceGlyphs" />

			</LinearLayout>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin"
				android:background="@drawable/rectangle">

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1">

						<CheckBox
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textAppearance="?android:attr/textAppearanceLarge"
							android:text="@string/cb_normalHack"
							android:id="@+id/cb_normalHack"/>

						<RadioGroup
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:layout_marginLeft="@dimen/activity_margin"
							android:id="@+id/rg_normal">

							<RadioButton
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:textAppearance="?android:attr/textAppearanceLarge"
								android:text="@string/rb_key"
								android:id="@+id/rb_normal_key"/>

							<RadioButton
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textAppearance="?android:attr/textAppearanceLarge"
								android:text="@string/rb_noKey"
								android:id="@+id/rb_normal_noKey"/>
						</RadioGroup>

					</LinearLayout>

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_weight="0">

						<Button
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/button_description"
							android:id="@+id/button_description"/>

					</LinearLayout>

				</LinearLayout>

				<CheckBox
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:layout_marginTop="@dimen/rectangle_margin"
					android:text="@string/cb_glyphHack"
					android:id="@+id/cb_glyphHack"/>

				<RadioGroup
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginLeft="@dimen/activity_margin"
					android:id="@+id/rg_glyph">

					<RadioButton
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:text="@string/rb_key"
						android:id="@+id/rb_glyph_key"/>

					<RadioButton
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:text="@string/rb_noKey"
						android:id="@+id/rb_glyph_noKey"/>
				</RadioGroup>

				<CheckBox
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:layout_marginTop="@dimen/rectangle_margin"
					android:text="@string/cb_glyphHackSpeed"
					android:id="@+id/cb_glyphHackSpeed"/>

				<RadioGroup
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginLeft="@dimen/activity_margin"
					android:id="@+id/rg_glyphSpeed">

					<RadioButton
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:text="@string/rb_fast"
						android:id="@+id/rb_glyph_fast"/>

					<RadioButton
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:text="@string/rb_slow"
						android:id="@+id/rb_glyph_slow"/>
				</RadioGroup>

			</LinearLayout>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin"
				android:background="@drawable/rectangle">

				<CheckBox
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/cb_debugLog"
					android:id="@+id/cb_debugLog" />

			</LinearLayout>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_marginTop="@dimen/activity_margin"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:background="@drawable/rectangle">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:background="#ffffff">

					<ImageView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:src="@drawable/bit"
						android:layout_gravity="center"
						android:layout_margin="@dimen/rectangle_margin" />

				</LinearLayout>

				<TextView
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/activity_margin"
					android:text="@string/donate"
					android:layout_gravity="center" />

			</LinearLayout>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin"
				android:background="@drawable/rectangle">

				<TextView
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/credits"
					android:id="@+id/tv_credits" />

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>
